# SWE-harness

./: .gitignore  20240623_moatless_claude-3.5-sonnet.test_modal.json  README.md  agentless.test_modal.json  debug_local.py  docker_adapter.py  docker_build.py  droid.factory_ver.json  generate_all_instance_functions.py  generate_func_from_dockerhub.py  generated_functions_swebench-verified.py  main.py  prepare_images.py  push_to_dockerhub.py  pyproject.toml  run_evaluation.py  run_evaluation_modal.py  run_evaluation_modal_lite.py  run_evaluation_modal_verified.py  run_instance_modal.py  run_modal_app.py  run_swebench.py  swe_modal_app.py  test_predictions.jsonl  test_run_combined_results.json  test_specs.txt
data/: ensembled_annotations_public.csv  swe-bench-verified_filtered.csv
generate_modal/: generate_func_from_jsonl.py  generated_functions.py  instance_ids.txt
modal_functions/: swebench_lite.py  swebench_verified.py  utils.py
scripts/: filter_verified_set.py  merge_datasets.py
