[tool.poetry]
name = "swe-harness"
version = "0.1.0"
description = ""
authors = ["Jesse Hu <huyouare@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
swebench = {git = "https://github.com/princeton-nlp/SWE-bench.git"}
modal = "^0.64.4"
jsonlines = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
